Fix form overflow, add more styles to form

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     display: flex;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /* Left section of page */
@@ -69,7 +70,7 @@ body {
     padding: 10px 0px;
     background: rgba(0, 0, 0, 40%);
     position: relative;
-    top: 25%;
+    top: 20%;
 }
 
 h1 {
@@ -94,34 +95,55 @@ h1 {
 }
 
 .call-to-action {
-    height: 40%;
-}
-
-.form {
-    height: 27%;
-    background-color: rgb(245, 245, 245);
-    padding: 20px 40px;
+    height: 35%;
 }
 
 form {
+    min-height: 27%;
+    background-color: rgb(255, 255, 255);
+    padding: 18px 40px 30px 40px;
     display: flex;
-    gap: 20px 50px;
+    gap: 15px 70px;
     flex-wrap: wrap;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 10%);
+    color: rgb(61, 61, 61);
+}
+
+h2 {
+    display: block;
+    width: 100%;
 }
 
 .form-field {
-    display: flex;
+    display: block flex;
     flex-direction: column;
 }
 
-.form-field > label, input {
+label, input {
     display: block;
     width: 250px;
 }
 
+label {
+    font-size: 0.8rem;
+    letter-spacing: 0.1rem;
+}
+
+input {
+    border-radius: 3px;
+}
+
+input:focus {
+
+}
+
+input:invalid {
+    border: 1.5px solid rgb(209, 45, 4);
+}
+
 button {
     color: white;
-    background-color: rgba(32, 67, 126);
+    background-image: linear-gradient(rgba(32, 67, 126), rgb(37, 91, 144));
     border: none;
     border-radius: 5px;
     padding: 12px 45px;
